--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "C:/PROGRA~1/nodejs/node.exe node_modules/vite/bin/vite.js",
-    "build": "C:/PROGRA~1/nodejs/node.exe node_modules/typescript/bin/tsc && C:/PROGRA~1/nodejs/node.exe node_modules/vite/bin/vite.js build",
-    "preview": "C:/PROGRA~1/nodejs/node.exe node_modules/vite/bin/vite.js preview"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
